[package]
name = "hermes"
version = "0.1.2"
edition = "2021"

[dependencies]
nom = "8.*"
tokio = { version = "1.*", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
] }
clap = { version = "4.*", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.*"
serde_json = "1"
serde_yaml = "0.9.*"
